revised April 23rd

--- a/Includes/Bibliography/_ref_2023.bib
+++ b/Includes/Bibliography/_ref_2023.bib
@@ -49,3 +49,13 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@article{wang2023systematic,
+  title={A systematic analysis of chemical mechanisms for ethylene oxidation and PAH formation},
+  author={Wang, Yiqing and Han, Wang and Zirwes, Thorsten and Attili, Antonio and Cai, Liming and Bockhorn, Henning and Yang, Lijun and Chen, Zheng},
+  journal={Combustion and Flame},
+  volume={253},
+  pages={112784},
+  year={2023},
+  publisher={Elsevier}
+}
