--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -2446,6 +2446,16 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@article{wang2023systematic,
+  title={A systematic analysis of chemical mechanisms for ethylene oxidation and PAH formation},
+  author={Wang, Yiqing and Han, Wang and Zirwes, Thorsten and Attili, Antonio and Cai, Liming and Bockhorn, Henning and Yang, Lijun and Chen, Zheng},
+  journal={Combustion and Flame},
+  volume={253},
+  pages={112784},
+  year={2023},
+  publisher={Elsevier}
+}
 @article{hellmuth2024role,
   title={The role of C3 and C4 species in forming naphthalene in counterflow diffusion flames},
   author={Hellmuth, Maximilian and Langer, Raymond and Meraviglia, Anita and Beeckmann, Joachim and Pitsch, Heinz},
