--- a/Includes/conclusion.tex
+++ b/Includes/conclusion.tex
@@ -1,1 +1,9 @@
 \section{Conclusion}
+
+This work presents Omnisoot as a robust computational tool built on Cantera to simulate soot formation coupled with gas-phase chemistry across various combustion and pyrolysis scenarios. Omnisoot integrates four reactor models, two aerosol dynamics models, and four inception and surface growth models, providing a comprehensive platform for analyzing uncertainties in predicting soot yield and morphology originating from chemical kinetics, inception processes, and surface growth rates. The tool was employed to elucidate differences among inception models in shock tubes, flow reactors, and well-stirred reactors.
+
+Global adjustment factors were applied to inception and surface growth rates to accurately reproduce experimental data for each target scenario across a range of parameters, including temperature, pressure, composition (equivalence ratio), and flow rates. The performance of inception models was evaluated based on soot yield, morphology, size distribution, inception and surface growth rates, and carbon mass source analysis. Although different inception models predicted similar carbon yields that closely matched experimental observations, they produced varying morphological characteristics. This highlights the importance of characterizing soot morphology to better constrain inception flux and surface growth rate predictions.
+
+Simulations of ethylene pyrolysis in a flow reactor demonstrated the temperature sensitivity of inception models. Irreversible models (Irreversible Dimerization and Dimer Coalescence) effectively captured the bimodal particle size distribution resulting from high inception flux in the lower-temperature region near the reactor exit. However, the Reactive Dimerization and EBridge models generated nearly unimodal distributions due to their strong temperature dependence, causing a significant drop in inception flux in the same region.
+
+The particle size distribution sampled at the outlet of a flow reactor downstream of a well-stirred reactor showed good agreement with experimental measurements across three equivalence ratios. Simulations indicated that active inception and surface growth primarily occur at high temperatures within the well-stirred reactor and at the entrance region of the flow reactor, far upstream of the sampling location. Under these conditions, the particle size distribution, morphology, and inception flux predictions were largely consistent across all inception models, although notable differences were observed in soot volume fraction due to variations in predicted HACA growth rate
