--- a/Includes/results/pfr.tex
+++ b/Includes/results/pfr.tex
@@ -1,13 +1,15 @@
 \subsection{Ethylene pyrolysis in a flow reactor}
-The PFR model was used to simulate the pyrolysis of \%0.6 $\mathrm{C_2H_4-N_2}$ in a flow reactor 1.4 m long and 16 mm in diameter. Figure~\ref{fig:pfr_temp} shows the axial temperature profile with the maximum temperature, $\mathrm{T_{max}}$ of 1673 K imposed on the model, which was calculated based on the thermocouple measurements by~\citet{mei2019quantitative} for various flow rates along the reactor centerline. The temperature starts from 300 K at the entrance and increases to reach the hot zone with the temperature within 10\% of $\mathrm{T_{max}}$.  The length of hot zone changes from 0.71 m for Q=8 L/min to 0.76 m for Q=12 L/min due to the advection effect. The temperature drop to 650 K near the end of the reactor. 
+The plug flow reactor (PFR) model was used to simulate the pyrolysis of 0.6\% $\mathrm{C_2H_4}$–$\mathrm{N_2}$ in a 1.4 m-long, 16 mm-diameter flow reactor. Figure~\ref{fig:pfr_temp} shows the axial temperature profile used in the simulations. The maximum temperature, $\mathrm{T_{max}} = 1673$ K, was imposed on the model based on thermocouple measurements reported by~\citet{mei2019quantitative} for various flow rates along the reactor centerline. The temperature increases from 300 K at the reactor inlet to the hot zone, where it reaches within 10\% of $\mathrm{T_{max}}$. The length of the hot zone varies with flow rate due to advection, ranging from 0.71 m at $Q = 8$ L/min to 0.76 m at $Q = 12$ L/min. Near the reactor outlet, the temperature drops to approximately 650 K.
 
-The inception and PAH adsorption adjustment factors were varied to match the predicted PSD with measurements at the end of reactor for various volumetric flow rates, Q of 8.5, 11 and 12 L/min shown in Figure~\ref{fig:pfr_psd}. The parametric analysis showed that only a single set of adjustment factors exist for each inception model that minimizes the prediction error of PSD across the flow rates. The KAUST mechanism~\citep{wang2013pah} was used to describe gas chemistry as it results in better agreement with PSD measurements compared to Caltech. A bimodal size distribution can be observed for Q=8 L/min (Figure~\ref{fig:pfr_psd}-a) that was attributed to the continuous inception~\citep{zhao2003measurement}. The comparison of simulations with measurements reveals different temperature dependence of inception models. Irreversible Dimerization and Dimer Coalescence (irreversible inception models) capture the bimodality of PSD in good agreement with the measurements, but the other two models predict a nearly unimodal PSD. The number concentration of the first section is lower by more than three orders of magnitude for Reactive Dimerization and EBridge Modified indicating the lack of active inception at the sampling location due the temperature drop near the end of reactor that suppresses soot inception.
+The inception and PAH adsorption adjustment factors were varied to match the predicted particle size distribution (PSD) with experimental measurements at the reactor exit for flow rates of 8.5, 11, and 12 L/min, as shown in Figure~\ref{fig:pfr_psd}. The parametric analysis revealed that each inception model requires a unique set of adjustment factors to minimize the PSD prediction error across different flow rates. The KAUST mechanism~\citep{wang2013pah} was used to describe gas-phase chemistry, as it provided better agreement with the measured PSDs than the Caltech mechanism.
 
-All inception models captured the disappearance of shoulder in the PSD at 11 and 12 L/min because the particle residence time is shorter compared to 8 L/min and the sampling was done before coagulation becomes dominant and forms the second peak. However, a one order of magnitude underprediction of the number concentration of incipient particles by Reactive Dimerization and EBridge Modified are compared to two irreversible inception models.
+A bimodal size distribution can be observed for Q=8 L/min (Figure~\ref{fig:pfr_psd}-a) that was attributed to the continuous inception~\citep{zhao2003measurement}. The comparison of simulations with measurements reveals different temperature dependence of inception models. Irreversible Dimerization and Dimer Coalescence (irreversible inception models) capture the bimodality of PSD in good agreement with the measurements, but the other two models predict a nearly unimodal PSD. The number concentration of the first section is lower by more than three orders of magnitude for Reactive Dimerization and EBridge Modified indicating the lack of active inception at the sampling location due the temperature drops near the end of reactor that suppresses soot inception.
 
-Figure~\ref{fig:pfr_psd} shows the evolution of total number concentration of agglomerates, $N_{agg}$ along the reactor. The predictions of the inception models are relatively close until z$\approx$1.1 m that corresponds to end of hot zone in the reactor, but $N_{agg}$ grows for irreversible inception models beyond that point because the inception continues in the low temperature region. The irreversible models are in better agreement with  measurements for 8 and 11 L/min, but overestimate the final number concentration at 12 L/min.
+All inception models capture the disappearance of the PSD shoulder at flow rates of 11 and 12 L/min. In these cases, the shorter particle residence time limits coagulation, preventing formation of a second peak. However, Reactive Dimerization and EBridge Modified still underpredict the number concentration of nascent particles by approximately one order of magnitude compared to the irreversible models.
 
-As shown in Figure\ref{fig:pfr_Iinc}, soot inception flux exhibits a sharp increase as the flow enters the hot zone of the reactor. The axial distance at which inception flux exceeds $10^7$ is the same for all inception models because it is mostly determined by the PAH chemistry, but the location is shifted downstream with flow rate because of shorter residence times. The difference between inception models is not significant in the hot zone. While the inception flux continues to grow for Irreversible Dimerization and Dimer Coalescence beyond the hot zone, Reactive Dimerization and EBridge predict a rapid decrease in inception flux by more than 3 orders of magnitude due to temperature drop.
+Figure~\ref{fig:pfr_psd} also presents the axial evolution of the total number concentration of agglomerates ($N_{agg}$). Predictions from all models agree closely up to $z \approx 1.1$ m, corresponding to the end of the hot zone. Beyond this point, $N_{agg}$ continues to increase for the irreversible models, which allow soot inception to proceed in cooler downstream regions. These models agree well with experimental data at 8 and 11 L/min but tend to overpredict $N_{agg}$ at 12 L/min.
+
+As shown in Figure~\ref{fig:pfr_Iinc}, soot inception flux rises sharply as the gas enters the hot zone. The axial location where the flux exceeds $10^7~\mathrm{cm^{-3}~s^{-1}}$ is similar across all inception models, as it is primarily determined by PAH chemistry. However, this location shifts downstream with increasing flow rate due to reduced residence time. Within the hot zone, differences among the inception models are minimal. Outside the hot zone, Irreversible Dimerization and Dimer Coalescence maintain high inception flux, while Reactive Dimerization and EBridge Modified predict a rapid decrease of more than three orders of magnitude due to cooling. Figure~\ref{fig:pfr_cmap} demonstrates the contribution of each pathway to total carbon mass of soot along the reactor that elucidate the link between the balance of inception and surface growth with particle morphology. The relative strength of inception decreases from 100\% to less than 5\% by z=1.1 m for all inception models leading to a gradual increase of $d_p$ and $d_m$. Irreversible Dimerization and Dimer Coalescence predict an increase in contribution of inception that resulting in the decline of $d_p$ while Reactive Dimerization and EBridge Modified predict a nearly constant $d_p$.
 
 
 \begin{figure}[H]
@@ -33,7 +35,7 @@ As shown in Figure\ref{fig:pfr_Iinc}, soot inception flux exhibits a sharp incre
 	\centering
 	\begin{tikzpicture}
 		\draw (0, 0) node[inner sep=0] 	{\includegraphics[width=1\textwidth]{Figures/Results/PFR/N_agg.pdf}};
-		\draw (4.85, -1.1) node {\tiny{\cite{mei2019quantitative}}};
+		\draw (4.85, -1.25) node {\tiny{\cite{mei2019quantitative}}};
 	\end{tikzpicture}
 	\caption{The total number of agglomerates along the PFR for Q=8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models compared with data~\citep{mei2019quantitative}.}
 	\label{fig:pfr_Nagg} 
@@ -44,4 +46,12 @@ As shown in Figure\ref{fig:pfr_Iinc}, soot inception flux exhibits a sharp incre
 	\includegraphics[width=1\textwidth]{Figures/Results/PFR/inception.pdf}
 	\caption{The soot inception flux along the PFR for Q=8.5 (a), 11 (b), and 12 L/min (c) obtained using KAUST mechanism and different inception models.}
 	\label{fig:pfr_Iinc} 
+\end{figure}
+
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{Figures/Results/PFR/C_tot_distmap.pdf}
+	\caption{The soot carbon mass from inception, PAH adsorption and HACA normalized by total soot carbon mass for Q=8.5 L/min along with primary particle $d_p$, and mobility, $d_m$ diameter obtained using KAUST mechanism and different inception models.}
+	\label{fig:pfr_cmap} 
 \end{figure}
