--- a/Includes/title.tex
+++ b/Includes/title.tex
@@ -12,7 +12,7 @@
 	\renewcommand\baselinestretch{1.3}
 	
 	\begin{abstract}
-	A computational tool, \textit{omnisoot} was developed to describe formation of carbonaceous nanoparticles from reaction of hydrocarbons. This tool includes four reactors models that allow utilizing all various reaction mechanisms for description of gas chemistry with two different aerosol dynamics model and four inception and surface growth models from the literature, which makes it a robust tool analyzing particle yield and morphology in famous experimental targets such as shock-tubes, and flow and well-stirred reactors. The integrated architecture of omnisoot enables a comprehensive comparison of different modeling approaches by providing a unified platform for evaluating the effects of reaction kinetics, aerosol dynamics, and surface growth mechanisms on soot formation. The tool facilitates detailed sensitivity analyses, benchmarking against experimental data, and the exploration of parameter spaces to improve predictive capabilities for carbonaceous particle formation in combustion environments.
+	A computational tool, \textit{omnisoot} was developed based on chemical kinetic functionalities of Cantera to describe formation of carbonaceous nanoparticles such as soot and Carbon Black (CB) from reaction of gaseous hydrocarbons. Four reactor models built in the tool can provide a simplified description of complex industrial processes. Omnisoot couples gas chemistry with the soot model that entails two different aerosol dynamics models, and four inception and surface growth models from the literature, which makes it a robust tool for analyzing particle yield and morphology in various experimental targets such as shock-tubes, and flow and well-stirred reactors. The integrated architecture of omnisoot enables highlighting the uncertainty in soot modelling that originates from gas chemistry and elucidating the difference between inception models in short and long residence times in the presence of active inception and surface growth and end of them. The temperature dependence of inception model significantly affects the particle size distribution measured at the end of a pyrolysis flow reactor where only irreversible models seem to predict the bimodality. The tool also provides essential information about the contribution of inception and surface growth to total soot mass as a determining factor in soot morphology. For example, in shock-tube pyrolysis of methane multiple combinations of inception and surface growth can minimize the prediction of carbon yield, but lead to remarkably different morphologies, which emphasizes the need for characterization of soot morphology to constrain inception and surface growth fluxes.
 		
 	\end{abstract}
 	
