--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
 \input{Includes/validation}
 \input{Includes/results/results}
 \input{Includes/conclusion}
+\input{Includes/acknowledgements}
 % ------------------------------------------------------------ %
 \clearpage
 \bibliography{Includes/Bibliography/all.bib}
