--- a/Includes/results/shocktube.tex
+++ b/Includes/results/shocktube.tex
@@ -1,7 +1,6 @@
-\subsection{Methane pyrolysis in shock-tube using constant pressure reactor}
-The pyrolysis of 5\% $\mathrm{CH_4}$-Ar was investigated using a constant pressure reactor model (CPR) for the post-shock temperature, $\mathrm{T_5}$ range of 1800-3000 K, and pressure, $\mathrm{P_5}$ range of 4.7-7.1 bar. $P_5$ was not specified for each experiment (characterized with $\mathrm{T_5}$), so we assume that $\mathrm{P_5}$ linearly increases with $\mathrm{T_5}$ in the specified pressure range~\citep{agafonov2016unified}. Caltech mechanism was used to describe gas chemistry. The inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively to match the predicted carbon yield at t=1.5 ms over the studied $\mathrm{T_5}$ and $\mathrm{P_5}$ with the light extinction measurements at $\mathrm{\lambda}$=632~nm~\citep{agafonov2016unified}. The measured carbon yield (CY) was retrieved from the reported CY$\times$E(m). There are uncertainties in the CY calculated using this technique due to the variability of E(m). It is common to use a E(m) of mature soot which might not be accurate for soot particles formed in shock-tube in short residence times ($\approx$ 2 ms), but the E(m) of soot increases significantly with particle size, composition and maturity. For example, E(m) changes from 0.05 to 0.25 as their primary particle diameter grows to 20 nm within 1.6 ms of acetylene pyrolysis in a shock tube. Having said that, there is still a large gap in the quantitative understanding evolving E(m) of soot. We considered the variability of E(m) from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot} in the literature. 
+The pyrolysis of a 5\% $\mathrm{CH_4}$--Ar mixture was investigated using a constant pressure reactor (CPR) model over a post-shock temperature range $\mathrm{T_5} = 1800$--$3000$ K and a pressure range $\mathrm{P_5} = 4.7$--$7.1$ bar. Since $\mathrm{P_5}$ was not specified for each experiment (characterized by a given $\mathrm{T_5}$), we assumed a linear increase of $\mathrm{P_5}$ with $\mathrm{T_5}$ within the specified range~\citep{agafonov2016unified}. The Caltech mechanism was used to describe gas-phase chemistry. Inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively, to match the predicted carbon yield at $t = 1.5$ ms with light extinction measurements at $\lambda = 632$ nm over the studied $\mathrm{T_5}$ and $\mathrm{P_5}$ ranges~\citep{agafonov2016unified}. The measured carbon yield (CY) was retrieved from the reported product CY$\times$E(m). There are uncertainties in CY calculated using this technique due to variability in E(m). It is common to use the E(m) of mature soot, which may not be accurate for soot particles formed in a shock tube over short residence times ($\approx 2$ ms). E(m) increases significantly with particle size, composition, and maturity. For example, E(m) varies from 0.05 to 0.25 as the primary particle diameter grows to 20 nm within 1.6 ms during acetylene pyrolysis. However, there remains a substantial gap in our quantitative understanding of evolving E(m) values for soot. We considered the reported variability of E(m) in the literature, ranging from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot}.The pyrolysis of a 5\% $\mathrm{CH_4}$--Ar mixture was investigated using a constant pressure reactor (CPR) model over a post-shock temperature range $\mathrm{T_5} = 1800$--$3000$ K and a pressure range $\mathrm{P_5} = 4.7$--$7.1$ bar. Since $\mathrm{P_5}$ was not specified for each experiment (characterized by a given $\mathrm{T_5}$), we assumed a linear increase of $\mathrm{P_5}$ with $\mathrm{T_5}$ within the specified range~\citep{agafonov2016unified}. The Caltech mechanism was used to describe gas-phase chemistry. Inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively, to match the predicted carbon yield at $t = 1.5$ ms with light extinction measurements at $\lambda = 632$ nm over the studied $\mathrm{T_5}$ and $\mathrm{P_5}$ ranges~\citep{agafonov2016unified}. The measured carbon yield (CY) was retrieved from the reported product CY$\times$E(m). There are uncertainties in CY calculated using this technique due to variability in E(m). It is common to use the E(m) of mature soot, which may not be accurate for soot particles formed in a shock tube over short residence times ($\approx 2$ ms). E(m) increases significantly with particle size, composition, and maturity. For example, E(m) varies from 0.05 to 0.25 as the primary particle diameter grows to 20 nm within 1.6 ms during acetylene pyrolysis. However, there remains a substantial gap in our quantitative understanding of evolving E(m) values for soot. We considered the reported variability of E(m) in the literature, ranging from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot}.
 
-A parametric study was performed on the inception and adsorption adjustment factors using a grid search approach. Each factor was varied across 11 logarithmically spaced values ranging from $10^{-4}$ to 1, resulting in 99 simulation cases for each data point (792 simulations in total). The combinations of $\eta_{inc}$ and $\eta_{ads}$ were sorted using the average relative error for all data points to find the combinations(s) of adjustment factors resulting in the minimum prediction error for carbon yield. Figure~\ref{fig:shockagof_yielderror_cpr} shows a heat map of the mean relative error normalized by the maximum value for Reactive Dimerization. The largest error occurs for the combination of the maximum inception and minimum PAH adsorption corresponding to  $\eta_{inc}=1$ ($\mathrm{\log_{10}}(\eta_{inc})$ = 0) and $\eta_{ads}=10^{-4}$ ($\mathrm{\log_{10}}(\eta_{ads})$ = -4). The region with the lowest normalized error (less than 5\%) was outlined in blue, and it covers a large number of adjustment factor pairs that led to the accurate prediction of carbon yield, but might change the predicted morphology. To better understand these effect, we took a multi-step approach: i) the model was run without soot to focus on the chemistry of precursors and $\mathrm{C_2H_2}$, ii) the inception models were optimized using equal adjustment factors $\eta_{inc}$=$\eta_{ads}$ iii) the inception models were optimized with the minimum adsorption rate, $\eta_{ads}= 10^{-4}$ (labeled as \textit{Min Ads}) and the minimum inception flux, $\eta_{inc}= 10^{-4}$ (labeled as \textit{Min Ads}).
+A parametric study was conducted on $\eta_{inc}$ and $\eta_{ads}$ using a grid search approach. Each factor was varied across 11 logarithmically spaced values from $10^{-4}$ to 1, resulting in 99 simulation cases per data point (792 simulations total). Combinations of $\eta_{inc}$ and $\eta_{ads}$ were ranked by the average relative error across all data points to identify the set minimizing the carbon yield prediction error. Figure~\ref{fig:shockagof_yielderror_cpr} shows a heat map of the mean relative error, normalized by the maximum value, for the Reactive Dimerization model. The largest error occurs for the combination of maximum inception ($\eta_{inc} = 1$ or $\log_{10}(\eta_{inc}) = 0$) and minimum adsorption ($\eta_{ads} = 10^{-4}$ or $\log_{10}(\eta_{ads}) = -4$). The region of lowest normalized error (less than 5\%) is outlined in blue and includes a broad set of adjustment factor combinations that accurately predict carbon yield but may affect predicted soot morphology.To better understand these effects, we adopted a multi-step approach: (i) simulations without soot were performed to isolate gas-phase chemistry and $\mathrm{C_2H_2}$ formation; (ii) inception models were optimized using equal adjustment factors $\eta_{inc} = \eta_{ads}$; and (iii) separate optimizations were performed for minimum adsorption ($\eta_{ads} = 10^{-4}$) and minimum inception ($\eta_{inc} = 10^{-4}$), denoted as \textit{Min Ads}.
 
 \begin{figure}[H]
 	\centering
@@ -13,7 +12,7 @@ A parametric study was performed on the inception and adsorption adjustment fact
 
 %The model was run without soot (only the gas phase is simulated and no soot conversion allowed) to provide insight into the effect of temperature on the species involved in soot formation.
 
-Figure~\ref{fig:SPC_cmf_cpr}-a shows the carbon mass fraction (CMF) of soot precursors (individual PAHs and total) and $\mathrm{C_2H_2}$ at 1.5 ms over the studied temperature range when soot model is deactivated. While the precursors exhibit a bell-shape behavior, the CMF of $\mathrm{C_2H_2}$ linearly increases with temperature and levels off after reaching 85\% $\mathrm{T_5\approx}$2400K. Among the considered PAHs, A2, A2R5, and A4R5 contain the majority of carbon and are expected to be major contributors to soot inception and surface growth.
+Figure~\ref{fig:SPC_cmf_cpr}a shows the carbon mass fraction (CMF) of soot precursors (individual PAHs and total) and $\mathrm{C_2H_2}$ at 1.5 ms across the studied temperature range, with the soot model deactivated. While PAH precursors exhibit a bell-shaped profile, the CMF of $\mathrm{C_2H_2}$ increases linearly with temperature and plateaus near 85\% at $\mathrm{T_5} \approx 2400$ K. Among the considered PAHs, A2, A2R5, and A4R5 account for most of the carbon and are likely major contributors to soot inception and surface growth. The significant variation in PAH CMF highlights the impact of precursor selection on inception flux, surface growth rates, and their temperature sensitivity. Figure~\ref{fig:shockagof_yieldspc_cpr} illustrates the effect of excluding five-membered ring PAHs (A2R5, A3R5, and A4R5) from the soot precursors on the carbon yield (CY) and primary particle diameter ($d_p$). As expected, excluding these species leads to a substantial reduction in CY: a factor of 3 for Reactive Dimerization and a factor of 12 for EBridge Modified. The peak CY temperature remains nearly unchanged for EBridge Modified but shifts to 2100 K for other inception models. The impact on $d_p$ is less pronounced, showing a decrease for Reactive Dimerization and a slight increase for other models in the 2100--2500 K range.
 
 \begin{figure}[H]
 	\centering
@@ -27,7 +26,20 @@ Figure~\ref{fig:SPC_cmf_cpr}-a shows the carbon mass fraction (CMF) of soot prec
 	\label{fig:SPC_cmf_cpr} 
 \end{figure}
 
-Next set of simulations were conducted by using equal adjustment factors ($\eta_{inc}=\eta_{ads}$) to minimize the prediction error of soot carbon yield. Figure~\ref{fig:shockagof_yield_dp_cpr} compares soot carbon yield and $d_p$ predicted using the different inception models and the sectional population balance model with the data from extinction measurements~\citep{agafonov2016unified}. A skew exponential curve (represented by the black dotted line) was fitted to the data to highlight the trend in carbon yield, and its likely peak at 12\%. Soot carbon yield has a bell-shape profile similar to the one shown for soot precursor because soot inception flux and mass growth are directly tied to the concentration of precursors used by the inception models. The yield predicted by Reactive Dimerization in the temperature range less than the temperature of the peak yield is larger than other inception models. EBridge Modified is shifted to higher temperatures compared to other inception models indicating different temperature dependence in this model, specifically the first step (PAH dehydrogenation) that is described by an Arrhenius rate as opposed to the other model where inception is initiated with physical collision of PAHs. The predicted $d_p$ uniformly increases with $\mathrm{T_5}$ to the peak value of 12.5 nm at 2700 K where yield is very low ($\approx10^{-7}$), and then rapidly falls to the minimum possible diameter in the model, 2 nm.
+
+\begin{figure}[H]
+	\centering
+	\begin{tikzpicture}
+		\draw (0, 0) node[inner sep=0] 	{\includegraphics[width=0.8\textwidth]{Figures/Results/Shocktube/Agafonov2016_cpr/carbon_yield_dp_spc_combined.pdf}};
+		\draw (-0.55, 0.29) node {\scriptsize{\cite{agafonov2016unified}}};
+		%\draw (2.42, -0.23) node {\scriptsize{\cite{agafonov2016unified}}};
+	\end{tikzpicture}
+	\caption{The soot carbon yield, CY at t=1.5 ms (a) and primary particle diameter, $d_p$ (b) obtained using the default soot precursors listed in Table~\ref{tab:precursors_list} (denoted by solid line and labeled as ``Default"") compared with the same results when five-membered ring PAHs  excluded from soot precursors (denoted by dashed line and labeled as ``NoFive"). Both cases were obtained using Caltech mechanism and the same equal adjustment factors. The dashed line was added to show the trend in the measurements~\citep{agafonov2016unified}.}
+	\label{fig:shockagof_yieldspc_cpr} 
+\end{figure}
+
+
+Next set of simulations were conducted by using equal adjustment factors ($\eta_{inc}=\eta_{ads}$) to minimize the prediction error of soot carbon yield. Figure~\ref{fig:shockagof_yield_dp_cpr} compares CY and $d_p$ from various inception models with experimental extinction data~\citep{agafonov2016unified}. A skew exponential curve (black dotted line) was fitted to highlight the CY trend and its peak near 12\%. Soot CY follows a bell-shaped profile similar to that of soot precursors, as inception flux and mass growth directly depend on precursor concentrations. Reactive Dimerization predicts higher CY at lower temperatures, while EBridge Modified shifts the peak to higher temperatures due to a different temperature dependency—primarily governed by PAH dehydrogenation via an Arrhenius rate law, in contrast to physical PAH collisions in other models. The predicted $d_p$ increases with $\mathrm{T_5}$, reaching a maximum of 12.5 nm at 2700 K, where yield is minimal ($\approx 10^{-7}$), and then drops to the model's minimum allowed value of 2 nm. Figure~\ref{fig:shockagof_Nagg_np_cpr}a shows that the total number of primary particles ($N_{pri}$) peaks at $\approx 2200$ K, aligning with the peak in carbon yield. This is expected since $N_{pri}$ depends solely on the inception flux, which is highest when PAH concentrations peak. Increased coagulation rates reduce the number of agglomerates ($N_{agg}$) in the 2000--2500 K range. The coagulation characteristic time depends on $N_{agg}$ and $\beta$, which is temperature dependent. Reactive Dimerization yields the fewest particles ($N_{pri}$ and $N_{agg}$) because more precursors are directed toward surface growth. Consequently, the number of primary particles per agglomerate ($n_p$) is lowest for Reactive Dimerization. Differences between inception models are more evident in $n_p$ than in $d_p$, influencing predicted particle morphology. These differences become more pronounced at longer residence times. For instance, Dimer Coalescence predicts a more ramified agglomerate ($n_p = 38$) compared to Reactive Dimerization ($n_p = 12$). Additional morphological data could help constrain inception and surface growth rates in soot models.
 
 \begin{figure}[H]
 	\centering
@@ -41,7 +53,14 @@ Next set of simulations were conducted by using equal adjustment factors ($\eta_
 \end{figure}
 
 
-The differences of inception models in prediction of $d_p$  is overall negligible except for Reactive Dimerization, which predicts a larger $d_p$ in $\mathrm{T_5}<$2500. The $d_p$ trends can be better understood by examining Equation\eqref{eqn:d_p} indicating that $d_p$ is proportional of the third-root of $C_{tot}/N_{pri}$. $C_{tot}$ describes total carbon mass converted to soot through inception and surface growth while $N_{pri}$ is only determined by inception flux. As a result, $d_p$ is controlled by the ratio of surface growth (HACA and PAH adsorption) rate to inception flux. The ratio of carbon mass gained up to 1.5 ms by each pathway to the total soot carbon mass is calculated and shown in Figure\ref{fig:shockagof_carbon_map_cpr}. PAH adsorption is the dominant soot mass growth pathway for Reactive Dimerization in $\mathrm{T_5}<$2000 K (Figure\ref{fig:shockagof_carbon_map_cpr}-a) that results in larger $C_{tot}/N_{pri}$ and $d_p$ values, but inception is dominant for the other inception models. The carbon mass fraction of inception decreases with temperature for all inception models leading to higher $d_p$ values up to 2700 K and it increases afterwards that changes $d_p$ trends.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{Figures/Results/Shocktube/Agafonov2016_cpr/N_agg_n_p_5CH4.pdf}
+	\caption{The temperature dependence of total number of agglomerates, $N_{agg}$ (a), number of primary particles per agglomerate, $n_p$ (b) at t=1.5 ms obtained using Caltech mechanism and different inception models optimized using equal adjustment factors to minimize the prediction with extinction measurements~\citep{agafonov2016unified}.}
+	\label{fig:shockagof_Nagg_np_cpr} 
+\end{figure}
+
+The differences of inception models in prediction of $d_p$  is overall negligible except for Reactive Dimerization, which predicts a larger $d_p$ in $\mathrm{T_5}<$2500. The $d_p$ trends can be better understood by examining Equation\eqref{eqn:d_p} indicating that $d_p$ is proportional of the third-root of $C_{tot}/N_{pri}$. $C_{tot}$ describes total carbon mass converted to soot through inception and surface growth while $N_{pri}$ is only determined by inception flux. As a result, $d_p$ is controlled by the ratio of surface growth (HACA and PAH adsorption) rate to inception flux. The ratio of carbon mass gained up to 1.5 ms by each pathway to the total soot carbon mass is calculated and shown in Figure~\ref{fig:shockagof_carbon_map_cpr}. PAH adsorption is the dominant soot mass growth pathway for Reactive Dimerization in $\mathrm{T_5}<$2000 K (Figure~\ref{fig:shockagof_carbon_map_cpr}-a) that results in larger $C_{tot}/N_{pri}$ and $d_p$ values, but inception is dominant for the other inception models. The carbon mass fraction of inception decreases with temperature for all inception models leading to higher $d_p$ values up to 2700 K and it increases afterwards that changes $d_p$ trends.
 
 
 \begin{figure}[H]
@@ -51,7 +70,7 @@ The differences of inception models in prediction of $d_p$  is overall negligibl
 	\label{fig:shockagof_carbon_map_cpr} 
 \end{figure}
 
-As shown in Figure\ref{fig:shockagof_yield_maxincads_cpr}, the inception models optimized using the minimum inception ($\eta_{inc}$) and PAH adsorption ($\eta_{ads}$) adjustment factors result in the carbon yield values indistinguishably close except for EBridge Modified model that is slightly shifted to higher temperatures in both cases. The minimum adsorption case has a higher peak and a narrower profile compared the minimum inception. Figure\ref{fig:shockagof_yield_maxincads_cpr} demonstrates the variation in $d_p$ among the inception models with the minimum inception (solid line) mode compared to the minimum adsorption (dashed line) that show negligible sensitivity to the inception model. In the minimum inception mode, the majority of soot mass comes from PAHs, so $d_p$ shows a bell-shape profile with a peak close to the temperature of CMF of precursors (dashed line in Figure\ref{fig:SPC_cmf_cpr}). Reactive Dimerization has the largest variation at the peak from 2 to 21 nm for the minimum inception and adsorption, respectively. The global adjustment factors were used to alter the contribution of precursors to inception and surface growth without changing the internal rate constants of inception models. A close agreement was achieved between the predicted and measured carbon yield in different modes of inception and PAH adsorption that can result in different soot morphology. Characterizing primary particle size in the experiment can reduce the uncertainty in the model and restrict the range of expected inception and surface growth rate and highlight the need to account for missing pathways and phenomena involved in soot yield and morphology.
+Figure~\ref{fig:shockagof_yield_maxincads_cpr} shows that optimizing models with minimum $\eta_{inc}$ and $\eta_{ads}$ yields similar CY predictions across inception models, except EBridge Modified, which shifts slightly toward higher temperatures. The minimum adsorption case has a higher peak and narrower profile compared to the minimum inception case. Figure~\ref{fig:shockagof_yield_maxincads_cpr} demonstrates the variation in $d_p$ among the inception models with the minimum inception (solid line) mode compared to the minimum adsorption (dashed line) that show negligible sensitivity to the inception model. In the minimum inception mode, the majority of soot mass comes from PAHs, so $d_p$ shows a bell-shape profile with a peak close to the temperature of CMF of precursors (dashed line in Figure~\ref{fig:SPC_cmf_cpr}). Reactive Dimerization has the largest variation at the peak from 2 to 21 nm for the minimum inception and adsorption, respectively. The global adjustment factors were used to alter the contribution of precursors to inception and surface growth without changing the internal rate constants of inception models. A close agreement was achieved between the predicted and measured carbon yield in different modes of inception and PAH adsorption that can result in different soot morphology. Characterizing primary particle size in the experiment can reduce the uncertainty in the model and restrict the range of expected inception and surface growth rate and highlight the need to account for missing pathways and phenomena involved in soot yield and morphology.
 
 \begin{figure}[H]
 	\centering
@@ -60,7 +79,7 @@ As shown in Figure\ref{fig:shockagof_yield_maxincads_cpr}, the inception models 
 			\draw (-0.48, 0.75) node {\scriptsize{\cite{agafonov2016unified}}};
 			\draw (5.33, 0.75) node {\scriptsize{\cite{agafonov2016unified}}};
 		\end{tikzpicture}
-	\caption{The comparison of soot carbon yield at t=1.5 ms when the minimum inception (a) and the minimum PAH adsorption (b) adjustment factors were applied to minimized the prediction error compared to measurements~\citep{agafonov2016unified} for 5\%~$\mathrm{CH_4}$-Ar obtained using Caltech mechanism and different inception models.}
+	\caption{The comparison of soot carbon yield at t=1.5 ms when the minimum inception (a) and the minimum PAH adsorption (b) adjustment factors were applied to minimize the prediction error compared to measurements~\citep{agafonov2016unified} for 5\%~$\mathrm{CH_4}$-Ar obtained using Caltech mechanism and different inception models.}
 	\label{fig:shockagof_yield_maxincads_cpr} 
 \end{figure}
 
